[gd_scene load_steps=9 format=3 uid="uid://dmvobm82bnlw5"]

[ext_resource type="PackedScene" uid="uid://d1absskdpac15" path="res://scenes/main_menu/main_menu.tscn" id="1_sxf4j"]
[ext_resource type="Script" uid="uid://ctpagbbajdbcv" path="res://scenes/map/map.gd" id="1_tqkkf"]
[ext_resource type="PackedScene" uid="uid://cjs1qisi5re4f" path="res://scenes/player/player.tscn" id="2_jcaow"]
[ext_resource type="PackedScene" uid="uid://tqewyifqimoo" path="res://scenes/rooms/base_room.tscn" id="3_a2pkv"]
[ext_resource type="PackedScene" uid="uid://bcktcqjou1y8n" path="res://scenes/rooms/collection/corridor_1.tscn" id="3_ph54e"]
[ext_resource type="PackedScene" uid="uid://dy5b8yqb0fu1b" path="res://scenes/rooms/collection/living_room.tscn" id="5_sqgf4"]
[ext_resource type="PackedScene" uid="uid://4jwk3ra7xx7a" path="res://scenes/intro/intro.tscn" id="6_04w0f"]

[sub_resource type="Environment" id="Environment_a2pkv"]
background_mode = 1
background_color = Color(0.029506557, 0.029506557, 0.029506557, 1)
fog_mode = 1
fog_light_color = Color(0, 0, 0, 1)
fog_density = 1.0
fog_depth_curve = 0.10153164
fog_depth_end = 15.0

[node name="Map" type="Node3D"]
script = ExtResource("1_tqkkf")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_a2pkv")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.7071068, 0.7071068, 0, -0.7071068, 0.7071068, -5, 7, 8)

[node name="Player" parent="." instance=ExtResource("2_jcaow")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 10)

[node name="Rooms" type="Node3D" parent="."]

[node name="LivingRoom" parent="Rooms" node_paths=PackedStringArray("north_room") instance=ExtResource("5_sqgf4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
north_room = NodePath("../BaseRoom")

[node name="BaseRoom" parent="Rooms" node_paths=PackedStringArray("west_room", "north_room", "south_room") instance=ExtResource("3_a2pkv")]
west_room = NodePath("../Corridor1")
north_room = NodePath("../BaseRoom3")
south_room = NodePath("../LivingRoom")

[node name="BaseRoom3" parent="Rooms" node_paths=PackedStringArray("south_room") instance=ExtResource("3_a2pkv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)
south_room = NodePath("../BaseRoom")

[node name="Corridor1" parent="Rooms" node_paths=PackedStringArray("east_room") instance=ExtResource("3_ph54e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 0)
east_room = NodePath("../BaseRoom")

[node name="Intro" parent="." instance=ExtResource("6_04w0f")]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="MainMenu" parent="GUI" instance=ExtResource("1_sxf4j")]

[connection signal="quitted" from="GUI/MainMenu" to="." method="_on_main_menu_quitted"]
